plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.10'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'com.sprint.mission'
version = '2.0-M9'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

jacoco {
    toolVersion = "0.8.11"
}

jacocoTestReport {
    dependsOn test // 테스트가 끝나면 리포트 생성

    reports {
        html.required = true
        xml.required = true
        csv.required = false // CSV는 보통 잘 안 봐서 뺌 (선택)
    }

    // 리포트 생성 시 제외할 파일들
    def Qdomains = []
    for (qPattern in '**/QA'..'**/QZ') {
        Qdomains.add(qPattern + '*')
    }

    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    "**/*Application*",
                    "**/config/**",
                    "**/dto/**",
                    "**/entity/**",
                    "**/exception/**",
                    "**/mapper/**",
                    "**/*Request*",
                    "**/*Response*",
                    "**/generated/**"
            ] + Qdomains)
        }))
    }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    runtimeOnly 'org.postgresql:postgresql'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // Swagger/OpenAPI 추가
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0'

    // H2 데이터베이스
    runtimeOnly 'com.h2database:h2'

    // Actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // S3
    implementation 'software.amazon.awssdk:s3:2.31.7'

}

tasks.named('test') {
	useJUnitPlatform()
}
